11/03/2021:
	- Extra checks within bilinear interpolation code to avoid problems when used with address-sanitizer


04/03/2021:
	- Minor logging changes to TileManager class to allow improve logging with very detailed logging now moved into
	  higher loglevel.


01/03/2012:
	- Modified JPEGCompressor::Finish() class to calculate data size before destroying compression structure.
	  Avoids complaints when using address-sanitizer complilation flag.


13/02/2021:
	- Added logarithm transform processing to Transform.cc using the formula: out = c*log(1+in).
	  Log transform can be requested by setting the gamma request to GAM=log or GAM=logarithm.


03/02/2021:
	- Added round() definition to JPEGCompressor.cc to allow MSVC compilation: https://github.com/ruven/iipsrv/issues/205


27/06/2020:
	- Trailing query suffixes using the ? character are now stripped off the IIIF quality/format string.
	  Fixes: https://github.com/ruven/iipsrv/issues/145


26/06/2020:
	- JPEG encoding re-written. Now more efficient with compressed data put directly into
	  output memory with no intermediate buffering and superfluous memory-memory copying.
	  Change also fixes problem with large ICC profiles: https://github.com/ruven/iipsrv/issues/198


23/06/2020:
	- Fixed incorrect resizing in IIIF when provided with -ve parameters.
	  Fixes: https://github.com/ruven/iipsrv/issues/201.


01/05/2020:
	- Corrected media type for ld+json response in IIIF.cc.
	  Fixes: https://github.com/ruven/iipsrv/issues/199


06/03/2020:
	- Added % escaping to URL::escape() function to avoid problems with FCGI's printf()
	  Fixes https://github.com/ruven/iipsrv/issues/195


25/02/2020:
	- Change return of createHTTPHeader function due to lack on stringstream
	  copying in older versions of GCC.


21/02/2020:
	- New utility function in IIPResponse class to generate HTTP headers,
	  avoiding repetition within Zoomify, Deepzoom, IIIF code etc.


19/02/2020: