@@ -1,7 +1,7 @@
 /*
     IIP Response Handler Class
 
-    Copyright (C) 2003-2020 Ruven Pillay.
+    Copyright (C) 2003-2021 Ruven Pillay.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -119,8 +119,8 @@ string IIPResponse::formatResponse(){
 string IIPResponse::getAdvert(){
 
   string advert = server + eof + "Content-Type: text/html" + eof;
-  advert += status + eof;
-  advert += "Content-Disposition: inline;filename=\"iipsrv.html\"" + eof + eof;
+  advert += "Content-Disposition: inline;filename=\"iipsrv.html\"" + eof;
+  advert += status + eof + eof;
   advert += "<!DOCTYPE html><html lang=\"en\"><head><meta charset=\"utf-8\"/><title>IIPImage Server</title><meta name=\"DC.creator\" content=\"Ruven Pillay &lt;ruven@users.sourceforge.net&gt;\"/><meta name=\"DC.title\" content=\"IIPImage Server\"/><meta name=\"DC.source\" content=\"https://iipimage.sourceforge.io\"/></head><body style=\"font-family:Helvetica,sans-serif; margin:4em\"><center><h1>IIPImage Server</h1><h2>Version "
     + string( VERSION ) +
     "</h2><br/><h3>Project Home Page: <a href=\"https://iipimage.sourceforge.io\">https://iipimage.sourceforge.io</a></h3><br/><h4>by<br/>Ruven Pillay</h4></center></body></html>";
